--- a/.github/workflows/dockerizedjs.yml
+++ b/.github/workflows/dockerizedjs.yml
@@ -1,9 +1,9 @@
-name: demo
+name: dockerizedjs-workflow
 run-name: ${{github.actor}} is running dockerizedjs-action
 on:
   workflow_dispatch
 jobs:
-  demo-job:
+  dockerizedjs-job:
     runs-on: ubuntu-latest
     steps:
       - uses: MarkTurney/d-checkout@v1.0.41
