--- a/.github/workflows/dockerizedjs.yml
+++ b/.github/workflows/dockerizedjs.yml
@@ -6,5 +6,6 @@ jobs:
   dockerizedjs-job:
     runs-on: ubuntu-latest
     steps:
-      - uses: MarkTurney/d-checkout@v1.0.0
+      #- uses: MarkTurney/d-checkout@v1.0.0
+      - uses: AndriiChyrva/d-checkout@v1.0.0
       #- uses: AndriiChyrva/dockerizedjs-action@v1.0
