--- a/.github/workflows/dockerizedjs.yml
+++ b/.github/workflows/dockerizedjs.yml
@@ -12,6 +12,9 @@ jobs:
       - id: run_ls
         run: |
           ls -la
+      - id: run_cd
+        run: |
+          cd ../../../../../
       - id: run_action
         uses: AndriiChyrva/d-checkout@v1.0.2
       #- uses: MarkTurney/d-checkout@v1.0.0
