--- a/.github/workflows/dockerizedjs.yml
+++ b/.github/workflows/dockerizedjs.yml
@@ -16,6 +16,8 @@ jobs:
       #   run: |
       #     cd /home/runner/
       #     ls -la
+      - id: add_problem_matcher
+        run: echo "::add-matcher::problem-matcher.json"
       - id: run_action
         uses: AndriiChyrva/d-checkout@v1.0.16
       #- uses: MarkTurney/d-checkout@v1.0.0
