--- a/.github/workflows/dockerizedjs.yml
+++ b/.github/workflows/dockerizedjs.yml
@@ -6,8 +6,8 @@ jobs:
   dockerizedjs-job:
     runs-on: ubuntu-latest
     steps:
-      # - id: add_problem_matcher
-        # run: "echo ::add-matcher::/problem-matcher.json"
+      - id: add_problem_matcher
+        run: "echo ::add-matcher::/problem-matcher.json"
         # run: "echo ::add-matcher::./../../../../../action/dist/problem-matcher.json"
       - id: run_action
-        uses: AndriiChyrva/d-checkout@v1.0.37
+        uses: AndriiChyrva/d-checkout@v1.0.38
